<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_application_description"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.area51.ayush.codequiz.ApplicationDescriptionActivity">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_description"/>



    </LinearLayout>

    </ScrollView>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/textViewDevelopedBy"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:text="@string/developed_by"/>

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/textViewDeveloperName"
            android:padding="10dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_height="wrap_content"
            android:text="@string/developer_name"
            android:layout_toEndOf="@+id/textViewDevelopedBy"
            android:layout_alignBaseline="@id/textViewDevelopedBy"/>
    </RelativeLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_button_text"
        android:id="@+id/continueButton"
        android:theme="@style/MyButton"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"/>
</LinearLayout>
